--- a/TimonKaeppel/preprocess.ipynb
+++ b/TimonKaeppel/preprocess.ipynb
@@ -11,19 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## splitting PDF in chunks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### importing required modules, specifying variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of pages: 176\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"KWG.txt\", 'w', encoding='utf-8') as f:\n",
     "    reader = PdfReader(source_filepath)\n",
@@ -66,11 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from llmsherpa.readers import LayoutPDFReader\n",
+    "import html2text\n",
     "\n",
     "llmsherpa_api_url = \"https://readers.llmsherpa.com/api/document/developer/parseDocument?renderFormat=all\"\n",
     "pdf_reader = LayoutPDFReader(llmsherpa_api_url)\n",
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,21 +103,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table><th><td colSpan=1>►M3</td><td colSpan=1>Richtlinie (EU) 2015/2366 des Europäischen Parlaments und des Rates vom 25. November 2015</td><td colSpan=1>L 337</td><td colSpan=1>35</td><td colSpan=1>23.12.2015</td></th><tr><td colSpan=1>►M4</td><td colSpan=1>Richtlinie (EU) 2018/843 des Europäischen Parlaments und des Rates vom 30. Mai 2018</td><td colSpan=1>L 156</td><td colSpan=1>43</td><td colSpan=1>19.6.2018</td></tr><tr><td colSpan=1>►M5</td><td colSpan=1>Richtlinie (EU) 2019/878 des Europäischen Parlaments und des Rates vom 20. Mai 2019</td><td colSpan=1>L 150</td><td colSpan=1>253</td><td colSpan=1>7.6.2019</td></tr><tr><td colSpan=1>►M6</td><td colSpan=1>Richtlinie (EU) 2019/2034 des Europäischen Parlaments und des Rates vom 27. November 2019</td><td colSpan=1>L 314</td><td colSpan=1>64</td><td colSpan=1>5.12.2019</td></tr><tr><td colSpan=1>►M7</td><td colSpan=1>Richtlinie (EU) 2021/338 des Europäischen Parlaments und des Rates vom 16. Februar 2021</td><td colSpan=1>L 68</td><td colSpan=1>14</td><td colSpan=1>26.2.2021</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artikel 1\n",
+      "\n",
+      "\n",
+      "---\n",
+      "In dieser Richtlinie sind Vorschriften für folgende Bereiche festgelegt:\n",
+      "\n",
+      "  * a) Zugang zur Tätigkeit von Kreditinstituten,\n",
+      "  * b) Aufsichtsbefugnisse und Instrumente für die Beaufsichtigung von Kreditinstituten durch die zuständigen Behörden,\n",
+      "  * c) Beaufsichtigung von Kreditinstituten durch die zuständigen Behör­ den in einer Weise, die mit den Bestimmungen der Verordnung (EU) Nr. 575/2013 vereinbar ist,\n",
+      "  * d) Veröffentlichungspflichten für die im Bereich der Aufsichtsvorschrif­ ten und der Beaufsichtigung von Kreditinstituten zuständigen Behör­ den.\n",
+      "\n",
+      "\n",
+      "---\n",
+      "▼B\n",
+      "\n",
+      "\n",
+      "---\n",
+      "Artikel 2\n",
+      "\n",
+      "\n",
+      "---\n",
+      "* (1) Diese Richtlinie gilt für Institute.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(html2text.html2text(doc.chunks()[11].to_html(include_children=True, recurse=True)))\n",
+    "print(\"---\")\n",
+    "print(html2text.html2text(doc.chunks()[12].to_html(include_children=True, recurse=True)))\n",
+    "print(\"---\")\n",
+    "print(html2text.html2text(doc.chunks()[13].to_html(include_children=True, recurse=True)))\n",
+    "print(\"---\")\n",
+    "print(html2text.html2text(doc.chunks()[14].to_html(include_children=True, recurse=True)))\n",
+    "print(\"---\")\n",
+    "print(html2text.html2text(doc.chunks()[15].to_html(include_children=True, recurse=True)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'HTML'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\timon\\Documents\\DHBW Ravensburg\\202310-202312\\TalkToALaw\\talk_to_a_law\\talk_to_a_law\\TimonKaeppel\\preprocess.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/timon/Documents/DHBW%20Ravensburg/202310-202312/TalkToALaw/talk_to_a_law/talk_to_a_law/TimonKaeppel/preprocess.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mHTML\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/timon/Documents/DHBW%20Ravensburg/202310-202312/TalkToALaw/talk_to_a_law/talk_to_a_law/TimonKaeppel/preprocess.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m HTML(doc\u001b[39m.\u001b[39mtables()[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mto_html())\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'HTML'"
+     ]
     }
    ],
    "source": [
@@ -124,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
