--- a/src/app/splits_create.ipynb
+++ b/src/app/splits_create.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,8 @@
     "\n",
     "for file in os.listdir(source_folderpath):\n",
     "    if file.endswith(\".pdf\"):\n",
-    "        pdf_to_text(file)"
+    "        # pdf_to_text(file)\n",
+    "        return"
    ]
   },
   {
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
     "    print(df.shape)\n",
     "    df.to_json(json_path)\n",
     "\n",
-    "def execute_splitter(splitter, splitter_folder_name):\n",
+    "def execute_char_splitter(splitter, splitter_folder_name):\n",
     "    splitter_folder_path = SPLITS_FOLDER + splitter_folder_name\n",
     "    if not os.path.exists(splitter_folder_path):\n",
     "        os.makedirs(splitter_folder_path)\n",
@@ -162,7 +163,7 @@
     "    is_separator_regex=False \n",
     ")\n",
     "\n",
-    "execute_splitter(char_splitter_128_o0, splitter_folder_name)"
+    "execute_char_splitter(char_splitter_128_o0, splitter_folder_name)"
    ]
   },
   {
@@ -209,7 +210,7 @@
     "    is_separator_regex=False \n",
     ")\n",
     "\n",
-    "execute_splitter(char_splitter_256_o0, splitter_folder_name)"
+    "execute_char_splitter(char_splitter_256_o0, splitter_folder_name)"
    ]
   },
   {
@@ -256,7 +257,7 @@
     "    is_separator_regex=False \n",
     ")\n",
     "\n",
-    "execute_splitter(char_splitter_512_o0, splitter_folder_name)"
+    "execute_char_splitter(char_splitter_512_o0, splitter_folder_name)"
    ]
   },
   {
@@ -303,7 +304,7 @@
     "    is_separator_regex=False \n",
     ")\n",
     "\n",
-    "execute_splitter(char_splitter_1024_o0, splitter_folder_name)"
+    "execute_char_splitter(char_splitter_1024_o0, splitter_folder_name)"
    ]
   },
   {
@@ -318,6 +319,104 @@
    "metadata": {},
    "source": [
     "## 'Artikel' Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\timon\\AppData\\Local\\Temp\\ipykernel_19312\\2502717473.py:5: FutureWarning: Possible nested set at position 26\n",
+      "  splits = re.split(pattern, text, flags=re.MULTILINE)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def split_text_articles(text):\n",
+    "    pattern = r'^([ t]+)?Artikel \\d{1,4}([[:lower:]]{1,2})?([ t]+)?$'\n",
+    "    splits = re.split(pattern, text, flags=re.MULTILINE)\n",
+    "    splits[0] = None\n",
+    "    splits = [split.strip() for split in splits if split]\n",
+    "    splits = [split for split in splits if split]\n",
+    "    return splits\n",
+    "\n",
+    "def write_article_splits_to_json():\n",
+    "    splitter_folder_path = SPLITS_FOLDER + \"article_regex_splitter/\"\n",
+    "    for file_name in os.listdir(TEXT_FILES_FOLDER):\n",
+    "        text = open(TEXT_FILES_FOLDER + file_name, 'r', encoding='utf-8').read()\n",
+    "        splits = split_text_articles(text)\n",
+    "        json_path = splitter_folder_path + file_name[:-4] + \".json\"\n",
+    "        df = pd.DataFrame(columns=['splits'], data=splits)\n",
+    "        df.to_json(json_path)\n",
+    "\n",
+    "# as \"KWG.pdf\" has no 'Artikel' keywords to split, we need something else here..\n",
+    "write_article_splits_to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read article splits\n",
+    "splitter_folder_path = SPLITS_FOLDER + \"article_regex_splitter/\"\n",
+    "df = pd.read_json(splitter_folder_path + \"CELEX_02013L0036-20220101_DE_TXT.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kriterien für qualifizierte Beteiligungen  \\nBei der Prüfung, ob die Kriterien für eine qualifizierte Beteil igung im \\nSinne der Artikel 22, 25 und 26 erfüllt sind, werden die in den  Artikeln \\n9, 10 und 11 der Richtlinie 2004/109/EG genannten Stimmrechte u nd \\ndie Voraussetzungen für das Zusammenrechnen der Beteiligungen n ach \\nArtikel 12 Absätze 4 und 5 jener Richtlinie berücksichtigt.  \\nBei der Prüfung, ob die Kriterien des Artikels 26 für eine qual ifizierte \\nBeteiligung erfüllt sind, berücksichtigen die Mitgliedstaaten n icht die \\nStimmrechte oder Kapitalanteile, die Institute möglicherweise i nfolge \\nder Emission von Finanzinstrumenten oder der Platzierung von Fi nanz\\xad\\ninstrumenten mit fester Übernahmeverpflichtung im Sinne des Anh angs \\nI Abschnitt A Nummer 6 der Richtlinie 2004/39/EG halten, voraus \\xad\\ngesetzt, diese Rechte werden nicht ausgeübt oder anderweitig be nutzt, \\num in die Geschäftsführung des Emittenten einzugreifen, und inn erhalb \\neines Jahres nach dem Zeitpunkt des Erwerbs veräußert.  \\n▼M6 __________  ▼C2\\n 02013L0036 — DE — 01.01.2022 — 008.004 — 31  \\nTITEL V  \\nBESTIMMUNGEN ÜBER DIE FREIE NIEDERLASSUNG UND DEN \\nFREIEN DIENSTLEISTUNGSVERKEHR  \\nKAPITEL 1  \\nAllgemeine Grundsätze'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['splits'][26] # zwischen Artikel 27 und 33 fehlt was?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Example usage\n",
+    "# text = \"\"\"\n",
+    "# USELESS PRECEDING TEXT\n",
+    "# Artikel 123\n",
+    "# This is the first article.\n",
+    "# Artikel 456\n",
+    "# This is another article.\n",
+    "# More text here.\n",
+    "# Artikel 789 SHOULD NOT BE SPLIT\n",
+    "# More TEEEEEEXT\n",
+    "# Artikel 1\n",
+    "# This is the last article.\n",
+    "# END OF TEXT\n",
+    "# \"\"\"\n",
+    "\n",
+    "# result = split_text_articles(text)\n",
+    "# print(type(result))\n",
+    "# print(len(result))\n",
+    "# for split in result:\n",
+    "#     print(split)\n",
+    "#     print()"
    ]
   },
   {
