new test script commit VULAN

--- a/src/app/create_qa_pairs.ipynb
+++ b/src/app/create_qa_pairs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,36 +17,26 @@
     "from langchain.prompts import PromptTemplate\n",
     "import os\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "import re"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
     "SPLITS_PATH = \"../resources/splits/\"\n",
-    "def do_qa_call(passage: str):\n",
+    "def do_q_call(passage: str):\n",
     "    template = \"\"\"\n",
-    "        Du bist ein Professor für das deutsche Bankenrecht. Erstelle genau 3 (DREI) unterschiedliche, deutsche Frage-Antwort-Paare zu folgendem Text.\n",
+    "        Erstelle genau eine (1) in der deutschen Sprache formulierte Frage zu folgendem Kontext.\n",
     "        Achte hierbei auf fachliche Korrektheit und Vollständigkeit:\n",
     "        \n",
     "        ---\n",
     "        {context}\n",
     "        ---\n",
     "        \n",
-    "        Gebe ausschließlich die Frage-Antwort-Paare an. Frage und Antwort sind jeweils durch einen Absatz getrennt. Die unterschiedlichen Frage-Antwort-Paare sind durch eine leere Zeile getrennt.:\n",
-    "\n",
-    "        Frage: '...'\n",
-    "        Antwort: '...'\n",
-    "\n",
-    "        Frage: '...'\n",
-    "        Antwort: '...'\n",
-    "\n",
-    "        Frage: '...'\n",
-    "        Antwort: '...'\n",
+    "        Gebe ausschließlich die Frage an! Ohne weiteren Text!\n",
     "        \"\"\"\n",
     "    prompt_template = PromptTemplate(\n",
     "            input_variables=[\"context\"],\n",
@@ -55,19 +45,171 @@
     "    prompt = prompt_template.format(context=passage)\n",
     "    replicateSession = Client(api_token=\"r8_c7xatuN0lmkBFqlgCXvas56nRkRWBeS1aXtWL\")\n",
     "    input = {\n",
+    "        \"system_prompt\": \"Du bist ein deutschsprachiger, hilfreicher Assisten für das deutsche Bankenrecht. Beantworte die Anfrage des Nutzers in deutsch.\",\n",
     "        \"prompt\": prompt,\n",
-    "        \"min_new_tokens\": 128,\n",
+    "        # \"min_new_tokens\": 0,\n",
     "        \"max_new_tokens\": 1024,\n",
-    "        \"temperature\": 0.1,\n",
+    "        # \"temperature\": 0.7,\n",
     "    }\n",
     "    iterator = replicateSession.run(\n",
-    "        \"mistralai/mixtral-8x7b-instruct-v0.1\",\n",
+    "        \"meta/meta-llama-3-70b-instruct\", # \"meta/llama-2-70b-chat\", # \"meta/meta-llama-3-8b\",  # \"mistralai/mixtral-8x7b-instruct-v0.1\",\n",
     "        input=input,\n",
     "    )\n",
-    "    qa_pairs = \"\"\n",
+    "    q = \"\"\n",
     "    for text in iterator:\n",
-    "        qa_pairs += text\n",
-    "    return qa_pairs"
+    "        q += text\n",
+    "    return q\n",
+    "\n",
+    "def do_a_call(question: str, passage: str):\n",
+    "    template = \"\"\"\n",
+    "        Beantworte folgende Frage in der deutschen Sprache.\n",
+    "\n",
+    "        ---\n",
+    "        {question}\n",
+    "        ---\n",
+    "\n",
+    "        Nutze für die Beantwortung der Frage folgenden Kontext:\n",
+    "\n",
+    "        ---\n",
+    "        {context}\n",
+    "        ---\n",
+    "        \n",
+    "        Gebe ausschließlich die Antwort als Fließtext, ohne weitere Bemerkungen an!\n",
+    "        \"\"\"\n",
+    "    prompt_template = PromptTemplate(\n",
+    "            input_variables=[\"question\", \"context\"],\n",
+    "            template=template,\n",
+    "    )\n",
+    "    prompt = prompt_template.format(question=question, context=passage)\n",
+    "    replicateSession = Client(api_token=\"r8_c7xatuN0lmkBFqlgCXvas56nRkRWBeS1aXtWL\")\n",
+    "    input = {\n",
+    "        \"system_prompt\": \"Du bist ein deutschsprachiger Assisten für das deutsche Bankenrecht. Beantworte die Anfrage des Nutzers in deutsch.\",\n",
+    "        \"prompt\": prompt,\n",
+    "        # \"min_new_tokens\": 0,\n",
+    "        \"max_new_tokens\": 1024,\n",
+    "        # \"temperature\": 0.7, # default\n",
+    "    }\n",
+    "    iterator = replicateSession.run(\n",
+    "        \"meta/meta-llama-3-70b-instruct\", # \"meta/llama-2-70b-chat\", # \"meta/meta-llama-3-8b\",  # \"mistralai/mixtral-8x7b-instruct-v0.1\",\n",
+    "        input=input,\n",
+    "    )\n",
+    "    a = \"\"\n",
+    "    for text in iterator:\n",
+    "        a += text\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_qa_pairs(split_folder: str):\n",
+    "    file_names = os.listdir(SPLITS_PATH + split_folder)\n",
+    "    with open(\"../resources/TestFragen/log.txt\", \"w\", encoding='utf-8') as f:\n",
+    "        for file in file_names:\n",
+    "            print(\"creating q_and_a for file \" + file)\n",
+    "            qa_df = pd.DataFrame(columns=[\"question\", \"answer\"])\n",
+    "            file_path = SPLITS_PATH + split_folder + file\n",
+    "            df = pd.read_json(file_path)\n",
+    "\n",
+    "            documents_ = df['splits'].to_list()\n",
+    "            if len(documents_) == 0:\n",
+    "                print(\"No splits in file \" + file_path + \". Skipping file.\")\n",
+    "                break\n",
+    "\n",
+    "            for split in tqdm(documents_):\n",
+    "                question = do_q_call(split)\n",
+    "                answer = do_a_call(question, split)\n",
+    "                \n",
+    "                f.write(\"-------------------\\n\")\n",
+    "                f.write(question + \"\\n\")\n",
+    "                f. write(\"---\\n\")\n",
+    "                f.write(answer + \"\\n\")\n",
+    "                f.write(\"-------------------\\n\\n\")\n",
+    "\n",
+    "                data = [{\"file\": file, \"question\": question, \"answer\": answer}] # list because of better pd.df \n",
+    "                df = pd.DataFrame(data)\n",
+    "                qa_df = pd.concat([qa_df, df], ignore_index=True)\n",
+    "                \n",
+    "            qa_df.to_json(\"../resources/TestFragen/\" + file)\n",
+    "            print(\"Done creating qa pairs for file \" + file + \". Written to json file.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating q_and_a for file CELEX_02013L0036-20220101_DE_TXT.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 1/162 [00:39<1:47:16, 39.98s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done creating qa pairs for file CELEX_02013L0036-20220101_DE_TXT.json. Written to json file.\n",
+      "creating q_and_a for file CELEX_02013R0575-20230628_DE_TXT.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 1/746 [00:44<9:16:45, 44.84s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done creating qa pairs for file CELEX_02013R0575-20230628_DE_TXT.json. Written to json file.\n",
+      "creating q_and_a for file KWG.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 1/196 [00:54<2:57:55, 54.75s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done creating qa pairs for file KWG.json. Written to json file.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_qa_pairs(\"pdf_pages/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SCRIPT FINISH JUST TESTING CODE HERE"
    ]
   },
   {
@@ -75,51 +217,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# def qa_pairs_to_json(qa_pairs: str):\n",
-    "#     qa_pairs = qa_pairs.split(\"\\n\\n\")\n",
-    "#     qa_pairs_list = []\n",
-    "#     for i in qa_pairs:\n",
-    "#         qa_dict = {}\n",
-    "#         qa = i.split(\"\\n\")\n",
-    "#         qa_dict[\"question\"] = qa[0].replace(re.compile(r'Frage: .*\\n'), '', 1)\n",
-    "#         qa_dict[\"answer\"] = qa[1].replace(re.compile(r'Antwort: .*\\n'), '', 1)\n",
-    "#         qa_pairs_list.append(qa_dict)\n",
-    "#     return qa_pairs_list\n",
-    "\n",
-    "def qa_pairs_to_json(qa_pairs: str):\n",
-    "    qa_pairs = qa_pairs.split(\"\\n\\n\")\n",
-    "\n",
-    "    if len(qa_pairs) == 6:\n",
-    "        pair1 = qa_pairs[0] + \"\\n\" + qa_pairs[1]\n",
-    "        pair2 = qa_pairs[2] + \"\\n\" + qa_pairs[3]\n",
-    "        pair3 = qa_pairs[4] + \"\\n\" + qa_pairs[5]\n",
-    "        qa_pairs = [pair1, pair2, pair3]\n",
-    "\n",
-    "    if len(qa_pairs) != 3:\n",
-    "        print(\"Error: Could not split qa_pairs into 3 pairs\")\n",
-    "        return None\n",
-    "    \n",
-    "    qa_pairs_list = []\n",
-    "    for i in qa_pairs:\n",
+    "def qa_pairs_to_json(q_and_a: str):\n",
+    "    q_and_a = q_and_a.split(\"\\n\")\n",
+    "    q_and_a = [x for x in q_and_a if x != '']\n",
+    "    if len(q_and_a) == 2:    \n",
     "        qa_dict = {}\n",
-    "        qa = i.split(\"\\n\")\n",
-    "        qa_dict[\"question\"] = qa[0].replace('Frage: ', '', 1)\n",
-    "        qa_dict[\"answer\"] = qa[1].replace('Antwort: ', '', 1)\n",
-    "        qa_pairs_list.append(qa_dict)\n",
-    "    return qa_pairs_list"
+    "        qa_dict[\"question\"] = q_and_a[0].replace('Frage: ', '', 1)\n",
+    "        qa_dict[\"answer\"] = q_and_a[1].replace('Antwort: ', '', 1)\n",
+    "    else:\n",
+    "        print(\"Error: Could not split q_and_a into q and a.\")\n",
+    "        return None\n",
+    "    return qa_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_answer = \"\"\"\n",
+    "Frage: Was ist das deutsche Bankenrecht?\n",
+    "Antwort: DAS HALT.\n",
+    "\"\"\"\n",
+    "\n",
+    "model_answer2 = \"\"\"\n",
+    "Frage: UND DAS NÖCHSTE?\n",
+    "Antwort: NOCHMAL\n",
+    "\"\"\"\n",
+    "\n",
+    "qa_df = pd.DataFrame(columns=[\"question\", \"answer\"])\n",
+    "qa_pairs_json = [qa_pairs_to_json(model_answer)]\n",
+    "df = pd.DataFrame(qa_pairs_json)\n",
+    "qa_df = pd.concat([qa_df, df], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "qa_pairs_json = [qa_pairs_to_json(model_answer2)]\n",
+    "df = pd.DataFrame(qa_pairs_json)\n",
+    "qa_df = pd.concat([qa_df, df], ignore_index=True)\n",
+    "\n",
+    "qa_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,151 +277,6 @@
     "            break\n",
     "        split = split[num_chars_max:]\n",
     "    return split_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_qa_pairs(split_folder: str):\n",
-    "    file_names = os.listdir(SPLITS_PATH + split_folder)\n",
-    "    for file in file_names:\n",
-    "        print(\"creating qa pairs for file \" + file)\n",
-    "        qa_df = pd.DataFrame(columns=[\"question\", \"answer\"])\n",
-    "        file_path = SPLITS_PATH + split_folder + file\n",
-    "        df = pd.read_json(file_path)\n",
-    "\n",
-    "        documents_ = df['splits'].to_list()\n",
-    "        if len(documents_) == 0:\n",
-    "            print(\"No splits in file \" + file_path + \". Skipping file.\")\n",
-    "            break\n",
-    "        splits = []\n",
-    "        for split in documents_:\n",
-    "            splits += split_long_split(split)    \n",
-    "\n",
-    "        with open(\"../resources/TestFragen/log.txt\", \"w\", encoding='utf-8') as f:\n",
-    "            count = 0\n",
-    "            for split in tqdm(splits):\n",
-    "                model_answer = do_qa_call(split)\n",
-    "                \n",
-    "                f.write(\"len split\")\n",
-    "                f.write(str(len(split)) + \"\\n\")\n",
-    "                f.write(\"len model answer\")\n",
-    "                f.write(str(len(model_answer)) + \"\\n\")\n",
-    "                f.write(model_answer + \"\\n\")\n",
-    "                # can filter for parsable answers here\n",
-    "\n",
-    "                qa_pairs_json = qa_pairs_to_json(model_answer)\n",
-    "                df = pd.DataFrame(qa_pairs_json)\n",
-    "                qa_df = pd.concat([qa_df, df], ignore_index=True)\n",
-    "\n",
-    "                if count == 10:\n",
-    "                    break\n",
-    "                count += 1\n",
-    "                \n",
-    "        qa_df.to_json(\"../resources/TestFragen/\" + file)\n",
-    "        print(\"Done creating qa pairs for file \" + file + \". Written to json file.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating qa pairs for file CELEX_02013L0036-20220101_DE_TXT.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/210 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  5%|▍         | 10/210 [00:50<16:53,  5.07s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of qa_pairs: 33\n",
-      "Done creating qa pairs for file CELEX_02013L0036-20220101_DE_TXT.json. Written to json file.\n",
-      "creating qa pairs for file CELEX_02013R0575-20230628_DE_TXT.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 5/746 [00:29<1:26:07,  6.97s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Could not split qa_pairs into 3 pairs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 9/746 [00:59<1:35:42,  7.79s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Could not split qa_pairs into 3 pairs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|▏         | 10/746 [01:11<1:27:08,  7.10s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of qa_pairs: 27\n",
-      "Done creating qa pairs for file CELEX_02013R0575-20230628_DE_TXT.json. Written to json file.\n",
-      "creating qa pairs for file KWG.json\n",
-      "No splits in file ../resources/splits/article_regex_splitter/KWG.json. Skipping file.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "create_qa_pairs(\"article_regex_splitter/\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SCRIPT FINISH JUST TESTING CODE HERE"
    ]
   },
   {
