--- a/src/app/testscript.ipynb
+++ b/src/app/testscript.ipynb
@@ -30,21 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welche Veröffentlichungspflichten gelten für die Behörden, die für die Aufsicht von Kreditinstituten zuständig sind?\n",
-      "Die Behörden, die für die Aufsicht von Kreditinstituten zuständig sind, haben Veröffentlichungspflichten gemäß den aufsichtsrechtlichen Vorschriften.\n"
+      "Frage:\n"
      ]
     }
    ],
    "source": [
-    "print(df1.iloc[2]['question'])\n",
-    "print(df1.iloc[2]['answer'])"
+    "print(df1.iloc[1]['question'])\n",
+    "# print(df1.iloc[1]['answer'])"
    ]
   },
   {
