--- a/src/app/vector_db_create.ipynb
+++ b/src/app/vector_db_create.ipynb
@@ -2473,21 +2473,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import chromadb \n",
+    "chroma_client = chromadb.PersistentClient(path=\"../resources/chromadb\")\n",
     "collection = chroma_client.get_collection(\"article_regex_splitter\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# collection.peek(0)\n",
-    "# collection.count()\n",
+    "collection.count()\n",
     "# collection.modify(name=\"new_name\")"
    ]
   },
